Divide html templates into fragments

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,185 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tasty Restaurant</title>
+<head th:replace="/fragments/header :: head"></head>
 
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-
-	<!-- Bootstrap -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
-
-
-
-</head>
 <body>
-	<aside>
-		<div class="scrollToTop">
-			<i class="fas fa-arrow-up"></i>
-		</div>
-	</aside>
-	<header>
-		<div class="container-fluid">
-			<nav class="mobile-nav">
-				<div class="row">
-					<div class="col-3">
-						<a href="#"><p>Tasty</p></a>
-					</div>
-					<div class="col-7 search">
-						<div class="input-group mb-3">
-							<input type="text" class="form-control" placeholder="Search....">
-							<button class="btn btn-outline-secondary button-addon2" type="button"><i class="fas fa-search"></i></button>
-						</div>
-					</div>
-					<div class="col-2 menu-icon">
-						<i class="fas fa-align-justify"></i>
-					</div>
-				</div>
-
-
-				<div class="overlay">
-					<div class="overlay-content">
-						<div class="row mobile-login">
-							<div class="col-4">
-								<i class="far fa-user-circle"></i>
-							</div>
-							<div class="col-8">
-								<p><a href="#">Sign in</a> / <a href="#">Sign up</a></p>
-							</div>
-						</div>
-						<ul class="menu">
-							<li class="home-menu"><a href="#">Home</a></li>
-							<li class = "about-menu"><a href="#">About</a></li>
-							<li class="menu-has-children services-menu">
-								<a href="#">Services</a>
-								<ul class="sub-menu-mobile">
-									<li><a href="#">Excellent food</a></li>
-									<li><a href="#">Fast food</a></li>
-									<li><a href="#">Delivery</a></li>
-								</ul>
-							</li>
-							<li class="menu-has-children dishes-menu">
-								<a href="#">Menu</a>
-								<ul class="sub-menu-mobile">
-									<li><a href="#">Pizza</a></li>
-									<li><a href="#">Salad</a></li>
-									<li><a href="#">Best seller</a></li>
-								</ul>
-							</li>
-							<li class="contact-menu"><a href="#">Contact us</a></li>
-						</ul>
-					</div>
-				</div>
-				
-			</nav>
-			<nav class="desktop-nav">
-				<div class="row">
-					<div class="col-md-2">
-						<a href="#"><p>Tasty</p></a>
-					</div>
-					<div class="col-md-10 menu-group">
-						<ul class="menu">
-							<li class="home-menu"><a href="#">Home</a></li>
-							<li class="about-menu"><a href="#">About</a></li>
-							<li class="menu-has-children services-menu">
-								<a href="#">Services</a>
-								<ul class="sub-menu">
-									<li><a href="#">Excellent food</a></li>
-									<li><a href="#">Fast food</a></li>
-									<li><a href="#">Delivery</a></li>
-								</ul>
-							</li>
-							<li class="menu-has-children dishes-menu">
-								<a href="#">Menu</a>
-								<ul class="sub-menu">
-									<li><a href="#">Pizza</a></li>
-									<li><a href="#">Salad</a></li>
-									<li><a href="#">Best seller</a></li>
-								</ul>
-							</li>
-							<li class="contact-menu"><a href="#">Contact us</a></li>
-							<li>
-								<div class="input-group mb-3">
-									<input type="text" class="form-control" placeholder="Search....">
-									<button class="btn btn-outline-secondary button-addon2" type="button"><i class="fas fa-search"></i></button>
-								</div>
-							</li>
-							<li class="menu-has-children">
-								<i class="fas fa-user"></i>
-								<ul class="login" sec:authorize="isAnonymous()">
-									<li>
-										<fieldset>
-
-											<h2>Sign in</h2>
-											<span>or <a href="#" class="sign-up">Create Account</a></span>
-
-											<div th:if="${param.error}">
-												<div class="alert alert-danger">
-													Invalid username or password.
-												</div>
-											</div>
-
-											<form th:action="@{/login}" method="post">
-												<div class="mb-3 row">
-													<label for="staticEmail" class="col-sm-4 col-form-label" >User</label>
-
-													<div class="col-sm-8">
-														<input type="text" class="form-control" id="staticEmail" name="username" required="required">
-													</div>
-												</div>
-												<div class="mb-3 row">
-													<label for="inputPassword" class="col-sm-4 col-form-label">Password</label>
-
-													<div class="col-sm-8">
-														<input type="password" class="form-control" id="inputPassword" name="password" required="required">
-													</div>
-												</div>
-												<button id="btn-login" type="submit">Sign in</button>
-											</form>
-										</fieldset>
-									</li>
-									<li>
-										<button id="btn-login-fb">
-											<span><i class="fab fa-facebook-f"></i></span>
-											<span>Sign in with FaceBook</span>
-										</button>
-										
-										
-									</li>
-									<li>
-										<button id="btn-login-gg">
-											<span><i class="fab fa-google-plus-g"></i></span>
-											<span>Sign in with Google</span>
-										</button>
-									</li>
-								</ul>
-
-								<ul class="login" sec:authorize="isAuthenticated()">
-									<li>
-										<fieldset>
-											<form th:action="@{/login}" method="post">
-												<button id="btn-logout" class="btn btn-danger" type="submit">Logout</button>
-											</form>
-										</fieldset>
-									</li>
-								</ul>
-
-							</li>
-							<li><i class="fas fa-shopping-cart"></i></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-		</div>
-	</header>
+	<div th:replace="/fragments/header :: header"></div>
 
 	<main>
 		<section class="home">
@@ -515,55 +340,7 @@
 			<div class="container">
 				<p class="sub-title">Special</p>
 				<h2>Menu of the week</h2>
-				<div class="row menu-card-group">
-					<div class="col-md-4 col-6" th:each="product : ${products}">
-						<div class="menu-card">
-							<a href="#"><img th:src="${product.getImageURL()}" src="/images/plate1.png" alt="plate" loading="lazy"></a>
-							<div class="menu-content">
-								<div class="menu-content-title">
-									<a href="#"><h3 th:text="${product.getName()}">Barbecue salad</h3></a>
-								</div>
-								<p th:text="${product.getDescription()}">Delicious dish</p>
-								<p th:text="${#numbers.formatCurrency(product.getPrice())}" class="price">$22.00</p>
-							</div>
-<!--							<a th:href="/cart/add-${product.getId}">-->
-								<div class="menu-cart">
-									<i class="fas fa-shopping-cart"></i>
-								</div>
-<!--							</a>-->
-						</div>
-					</div>
-<!--					<div class="col-md-4 col-6">-->
-<!--						<div class="menu-card">-->
-<!--							<a href="#"><img src="/images/plate2.png" alt="plate" loading="lazy"></a>-->
-<!--							<div class="menu-content">-->
-<!--								<div class="menu-content-title">-->
-<!--									<a href="#"><h3>Salad with fish</h3></a>-->
-<!--								</div>-->
-<!--								<p>Delicious dish</p>-->
-<!--								<p class="price">$12.00</p>-->
-<!--							</div>-->
-<!--							<div class="menu-cart">-->
-<!--								<i class="fas fa-shopping-cart"></i>-->
-<!--							</div>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--					<div class="col-md-4 col-6">-->
-<!--						<div class="menu-card">-->
-<!--							<a href="#"><img src="/images/plate3.png" alt="plate" loading="lazy"></a>-->
-<!--							<div class="menu-content">-->
-<!--								<div class="menu-content-title">-->
-<!--									<a href="#"><h3>Spinach salad</h3></a>-->
-<!--								</div>-->
-<!--								<p>Delicious dish</p>-->
-<!--								<p class="price">$9.50</p>-->
-<!--							</div>-->
-<!--							<div class="menu-cart">-->
-<!--								<i class="fas fa-shopping-cart"></i>-->
-<!--							</div>-->
-<!--						</div>-->
-<!--					</div>-->
-				</div>
+				<div th:replace="/fragments/products :: products"></div>
 			</div>
 		</section>
 
@@ -618,51 +395,7 @@
 		</section>
 	</main>
 
-	<footer>
-		<div class="footer">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-3">
-						<a href="#"><h2>Tasty Food</h2></a>
-						<div class="divider"></div>
-						<p>Restaurant</p>
-						<i class="fab fa-facebook-f"></i>
-						<i class="fab fa-instagram"></i>
-						<i class="fab fa-twitter"></i>
-					</div>
-					<div class="col-md-3">
-						<h2>Services</h2>
-						<div class="divider"></div>
-						<a href="#"><p>Delivery</p></a>
-						<a href="#"><p>Pricing</p></a>
-						<a href="#"><p>Fast Food</p></a>
-						<a href="#"><p>Reserve your spot</p></a>
-					</div>
-					<div class="col-md-3">
-						<h2>Information</h2>
-						<div class="divider"></div>
-						<a href="#"><p>Event</p></a>
-						<a href="#"><p>Contact us</p></a>
-						<a href="#"><p>Privacy policy</p></a>
-						<a href="#"><p>Terms of service</p></a>
-					</div>
-					<div class="col-md-3">
-						<h2>Address</h2>
-						<div class="divider"></div>
-						<p>Lima - Peru</p>
-						<p>Jr Union #999</p>
-						<p>999-888-777</p>
-						<p>tastyfood@gmail.com</p>
-					</div>
-				</div>
-			</div>
-			<div class="copyright">
-				<p>&copy; TastyFood. All right reserved.</p>
-			</div>
-		</div>
-	</footer>
+	<div th:replace="/fragments/footer :: footer"></div>
 
-	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-	<script src="/scripts/script.js"></script>
 </body>
 </html>
