--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -48,9 +48,9 @@
             <p>&copy; TastyFood. All right reserved.</p>
         </div>
     </div>
-    </footer>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="/scripts/script.js"></script>
+    <script src="/scripts/cart.js"></script>
 </div>
 
 </body>
