--- a/src/main/resources/templates/cart-as-whole.html
+++ b/src/main/resources/templates/cart-as-whole.html
@@ -210,7 +210,7 @@
             <input onchange="calculate(this)" th:class="quantity" th:attr="data-id=${cartItem.id}" th:field="*{cartItems[__${itemStat.index}__].quantity}" type="number" min="0"  class="form-control" aria-describedby="basic-addon1">
           </td>
           <td th:class="price" th:attr="data-id=${cartItem.id}" th:text="${#numbers.formatCurrency(cartItem.product.price)}" class="align-middle"><h3 class="m-0"></h3></td>
-          <td th:class="final-price" th:attr="data-id=${cartItem.id}" th:text="${#numbers.formatCurrency(cartItem.product.price * cartItem.quantity)}" style="font-weight: bold;">Total Price will go here</td>
+          <td th:class="final-price" th:attr="data-id=${cartItem.id}" th:text="${#numbers.formatCurrency(cartItem.product.price * cartItem.quantity)}" style="font-weight: bold; padding-right: 100px;">Total Price will go here</td>
           <!--                    th:text="${#numbers.formatCurrency(cartItem.product.price * cartItem.quantity)}"-->
           <td class="align-middle">
             <a th:href="@{'/cart/delete-item/{id}' (id=${cartItem.id})}">
@@ -218,13 +218,13 @@
             </a>
           </td>
         </tr>
-        <tr>
-          <td id="total-price">Total: $</td>
-        </tr>
         </tbody>
       </table>
+      <div class="row">
+        <div class="col-md-5 text-end mt-2" id="total-price">Total: $</div>
+      </div>
     </div>
-    <div class="d-flex flex-row-reverse mt-5">
+    <div class="d-flex flex-row-reverse mt-5" style="justify-content: center;">
       <a class="btn btn-success ms-2" href="/order/">
         <span class="fw-bold fs-6">Order</span>
       </a>
