--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -376,16 +376,24 @@
 						<div class="content">
 							<p class="sub-title">Let's talk</p>
 							<h2>Contact us</h2>
-							<p>If you want to reserve a table in our restaurant, con tact us and we will attend you quickly, with our 24/7 chat service.</p>
+							<p>If you want to reserve a table in our restaurant, contact us and we will attend you quickly, with our 24/7 chat service.</p>
 						</div>
 					</div>
 					<div class="col-md-6 consult">
 						<div class="consult-form">
-							<form method="post" action="#">
-								<input type="text" name="name" placeholder="Your name" class="form-control"><br>
-								<input type="email" name="mail" placeholder="Your email" class="form-control"><br>
-								<input type="tel" name="tel" placeholder="Your telephone number" class="form-control"><br>
-								<textarea name="Content" placeholder="Content" class="form-control" rows="3"></textarea><br>
+							<form method="post" th:action="@{/customer-support/send}" th:object="${message}">
+								<input th:field="*{name}" type="text" placeholder="Your name" class="form-control"><br>
+								<div class="alert alert-warning" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">aaa</div>
+
+								<input th:field="*{email}" type="email" placeholder="Your email" class="form-control"><br>
+								<div class="alert alert-warning" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">aaa</div>
+
+								<input th:field="*{phoneNumber}" type="tel" placeholder="Your telephone number" class="form-control"><br>
+								<div class="alert alert-warning" th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"></div>
+
+								<textarea th:field="*{content}" placeholder="Content" class="form-control" rows="3"></textarea><br>
+								<div class="alert alert-warning" th:if="${#fields.hasErrors('content')}" th:errors="*{content}"></div>
+
 								<button type="submit" class="btn btn-success">Send</button>
 							</form>
 						</div>
