Fix bugs in the services related to Ordering

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -76,7 +76,7 @@
             <div class="alert alert-danger" th:if="${error} != null" th:text="${error}"></div>
         </div>
         <div class="d-flex flex-row-reverse" style="justify-content: center;">
-            <a class="btn btn-success ms-2" th:href="@{/order}">
+            <a class="btn btn-success ms-2" th:href="@{/order/take-order}">
                 <span class="fw-bold fs-6">Order</span>
             </a>
             <a class="btn btn-success ms-2" href="/home/menu">
