Add History Of Orders view

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -79,7 +79,7 @@
             <a class="btn btn-success ms-2" th:href="@{/order/take-order}">
                 <span class="fw-bold fs-6">Order</span>
             </a>
-            <a class="btn btn-success ms-2" href="/home/menu">
+            <a class="btn btn-success ms-2" th:href="@{/}">
                 <span class="fw-bold fs-6">Continue shopping</span>
             </a>
             <button class="btn btn-success ms-2" type="submit" th:value="save">Save</button>
