--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -81,7 +81,7 @@
             <nav class="desktop-nav">
                 <div class="row">
                     <div class="col-md-2">
-                        <a href="#"><p>Tasty</p></a>
+                        <a th:href="@{/}"><p>Tasty</p></a>
                     </div>
                     <div class="col-md-10 menu-group">
                         <ul class="menu">
